Set poly params immediately